--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qu-backend",
   "version": "0.0.1",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js"
