--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "http-errors": "~1.6.3",
-    "mongoose": "5.11.18",
     "@now/node": "^1.6.1",
     "compression": "^1.7.4",
+    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
+    "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
+    "http-errors": "~1.6.3",
+    "mongoose": "5.11.18",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "protonmail-api": "^2.1.0"
   }
 }
